--- a/popup.html
+++ b/popup.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>WikiHighlighter</title>
+  <title>Highlighter</title>
   <link rel="stylesheet" type="text/css" href="popup.css">
 </head>
 <body>
