--- a/popup.html
+++ b/popup.html
@@ -1,10 +1,20 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Highlighter</title>
-  <link rel="stylesheet" type="text/css" href="popup.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Extension Popup</title>
+  <style>
+    body {
+      width: 100px;
+      padding: 20px;
+    }
+  </style>
 </head>
 <body>
-
+  <h1>Extension Popup</h1>
+  <p>This is a simple popup for your extension.</p>
+  <button id="closePopup">Close Popup</button>
+  <script src="popup.js"></script>
 </body>
 </html>
