--- a/popup.html
+++ b/popup.html
@@ -6,14 +6,17 @@
   <title>Extension Popup</title>
   <style>
     body {
-      width: 100px;
+      width: 150px;
       padding: 20px;
     }
   </style>
 </head>
 <body>
   <h1>Extension Popup</h1>
-  <p>This is a simple popup for your extension.</p>
+  <label>
+    <input type="checkbox" id="toggleExtension">
+    Enable Extension
+  </label>
   <button id="closePopup">Close Popup</button>
   <script src="popup.js"></script>
 </body>
